# pyride_pepper

./: .cproject  .gitmodules  .project  README.md  mainpage.dox  pyride.dox
PyNaoServer/: CMakeLists.txt  PepperProxyManager.cpp  PepperProxyManager.h  PyPepperModule.cpp  PyPepperModule.h  PyPepperServer.cpp  PyPepperServer.h  qiproject.xml
PyPepperServer/: .cproject  .project  AudioFeedbackStream.h  CMakeLists.txt  PepperProxyManager.cpp  PepperProxyManager.h  PyPepperModule.cpp  PyPepperModule.h  PyPepperServer.cpp  PyPepperServer.h  main.cpp  qiproject.xml
docs/: CNAME  annotated.html  classPyPepper-members.html  classPyPepper.html  classes.html  dir_3bdd366c61c312c028aa5c13956d6734.html  dir_49d819eca6148a5234d50e5e0f8549ff.html  dir_dd4b1e9ca2dd4b1b952e2d75a32a1b19.html  functions.html  functions_func.html  index.html
docs/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_a.js  all_d.js  classes_0.js  functions_2.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_e.js  search.js
libsrc/PyRideCore/: CMakeLists.txt  DeviceController.cpp  PyRideCommon.h
libsrc/ccrtp-1.7.2/: CMakeLists.txt
libsrc/ccrtp-1.7.2/src/ccrtp/: sources.h
scripts/: messenger.py  py_main.py  tinmind.py  tinstate.py
